# fast-logi-blot-input-switcher

./: .clang-format  LICENSE  README.md  meson.build
cross/: linux_x64.txt  macos_arm64.txt  macos_x64.txt  win_x64.txt
src/: device_config.cc  device_config.h  hid_utils.cc  hid_utils.h  logitech_devices.cc  logitech_devices.h  main.cc  tui.cc  tui.h  utils.cc  utils.h
subprojects/: hidapi.wrap
